[package]
edition = "2018"
name = "rust-random-lgtm-image"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
image = "0.23.14"
imageproc = "0.22.0"
rand = "0.8.4"
reqwest = {version = "0.11.6", features = ["json"]}
rusttype = "0.9.2"
serde_json = "1.0.68"
tokio = {version = "1.12.0", features = ["full"]}
